# hyprfreeze-rs

./: Cargo.toml  LICENSE  README.md  build.sh  install.sh
.github/workflows/: rust.yml
src/: args_structure.rs  desktop.rs  main.rs  pid.rs  process.rs  utils.rs
