[package]
name = "hyprfreeze-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of hyprfreeze for suspending and resuming processes in Hyprland and Sway"
repository = "https://github.com/yourusername/hyprfreeze-rs"
license = "MIT"
keywords = ["hyprland", "sway", "process", "suspend", "resume"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"